--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,6 +7,10 @@
                 android:id="@+id/nav_toast"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Toast" />
+            <item
+                android:id="@+id/nav_listview"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Listview" />
         </menu>
     </item>
 
