--- a/app/src/main/res/layout/fragment_toast.xml
+++ b/app/src/main/res/layout/fragment_toast.xml
@@ -17,4 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/button_custom_toast"
+        android:text="Custom Toast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
