--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -15,6 +15,10 @@
                 android:id="@+id/nav_listview"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Listview" />
+            <item
+                android:id="@+id/nav_progressbar"
+                android:icon="@drawable/ic_menu_share"
+                android:title="ProgressBar" />
         </menu>
     </item>
 
