--- a/app/src/main/res/layout/fragment_alert_dialog.xml
+++ b/app/src/main/res/layout/fragment_alert_dialog.xml
@@ -25,6 +25,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/show_4_btn_alert"
+        android:text="Custom Alert"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
