scan wifi fragment added

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -35,6 +35,10 @@
                 android:id="@+id/nav_crop_image"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Crop Image" />
+            <item
+                android:id="@+id/nav_scan_wifi"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Scan Wifi" />
         </menu>
     </item>
 
