--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -20,6 +20,10 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="RecyclerView" />
             <item
+                android:id="@+id/nav_grid_view"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Grid_view" />
+            <item
                 android:id="@+id/nav_progressbar"
                 android:icon="@drawable/ic_menu_share"
                 android:title="ProgressBar" />
