--- a/app/src/main/res/layout/grid_view_list_item.xml
+++ b/app/src/main/res/layout/grid_view_list_item.xml
@@ -18,6 +18,7 @@
         android:id="@+id/grid_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/primary_text"
         android:textSize="9sp" >
     </TextView>
 
