--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nametext"
-            android:textColor="#000"
+            android:textColor="@color/primary_text"
             android:layout_marginTop="30dp"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="28dp"
