--- a/app/src/main/res/layout/recyclerview_items.xml
+++ b/app/src/main/res/layout/recyclerview_items.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:id="@+id/name"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/primary_text"
         android:textSize="16dp"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
@@ -22,6 +22,7 @@
 
     <TextView
         android:id="@+id/institute"
+        android:textColor="@color/secondary_text"
         android:layout_below="@id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
