--- a/app/src/main/res/layout/custom_alert_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_alert_dialog_layout.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="15dp"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <EditText
@@ -15,6 +16,7 @@
         android:hint="User Name"
         android:textColor="@color/primary_text"
         android:textColorHint="@color/secondary_text"/>
+
     <EditText
         android:id="@+id/password"
         android:inputType="textPassword"
@@ -28,4 +30,11 @@
         android:hint="Password"
         android:textColor="@color/primary_text"
         android:textColorHint="@color/secondary_text"/>
+
+    <Button
+        android:id="@+id/buttonSubmit"
+        android:text="Submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
