--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -19,8 +19,9 @@
         android:clickable="true"/>
 
     <Button
-        android:layout_width="250dp"
-        android:layout_height="70dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="PopUp Menu"
         android:id="@+id/popupmenu"/>
