--- a/app/src/main/res/layout/fragment_snack_bar.xml
+++ b/app/src/main/res/layout/fragment_snack_bar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.pawan.androidvital.fragment.Toast.SnackBar.SnackBarFragment">
+    >
 
     <Button
         android:id="@+id/button_short_snack_bar"
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:visibility="gone"
         android:id="@+id/button_custom_snack_bar"
         android:text="Custom Snack Bar"
         android:layout_width="match_parent"
