--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,21 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="0.40"
-    android:background="#ffffff"
-    android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/nametext"
-            android:textColor="@color/primary_text"
-            android:layout_marginTop="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="28dp"
-            android:text="Name"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            />
+    <TextView
+        android:padding="10dp"
+        android:id="@+id/nametext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="Name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/primary_text" />
 
 </LinearLayout>
