--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -22,11 +22,11 @@
             <item
                 android:id="@+id/nav_grid_view"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Grid_view" />
+                android:title="Grid View" />
             <item
                 android:id="@+id/nav_progressbar"
                 android:icon="@drawable/ic_menu_share"
-                android:title="ProgressBar" />
+                android:title="Progress Bar" />
             <item
                 android:id="@+id/nav_menu"
                 android:icon="@drawable/ic_menu_share"
