--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -14,11 +14,11 @@
             <item
                 android:id="@+id/nav_listview"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Listview" />
+                android:title="List View" />
             <item
                 android:id="@+id/nav_recycler"
                 android:icon="@drawable/ic_menu_share"
-                android:title="RecyclerView" />
+                android:title="Recycler View" />
             <item
                 android:id="@+id/nav_grid_view"
                 android:icon="@drawable/ic_menu_share"
