--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -50,6 +50,10 @@
             <item
                 android:id="@+id/nav_time_picker"
                 android:icon="@drawable/ic_menu_share"
+                android:title="Time Picker" />
+            <item
+                android:id="@+id/nav_chrome_tab"
+                android:icon="@drawable/ic_menu_share"
                 android:title="Custom Chrome Tab" />
         </menu>
     </item>
